# ChotuAI-Portfolio-Analyzer

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
agents/: portfolio_agent.py
analytics/: __init__.py  benchmark.py  benchmark_metrics.py  returns.py
analytics/risk/: __init__.py  beta.py  constants.py  drawdown.py  models.py  ratios.py  risk_engine.py  statistics.py  var.py
app_config/: benchmarks.py  settings.py
brokers/: __init__.py  base.py  manager.py  types.py
components/: login.py
domain/: __init__.py  enums.py  instrument.py
network/: callback_server.py
portfolio/: __init__.py  builder.py  history_builder.py  models.py  portfolio.py  portfolio_engine.py
providers/: __init__.py  amfi_provider.py  broker_provider_factory.py  icici_provider.py  market_data_provider.py  models.py  yfinance_provider.py  zerodha_provider.py
repositories/: __init__.py  base.py  instrument_repository.py  memory_repository.py
services/: __init__.py  ai_service.py  analytics_service.py  benchmark_service.py  exceptions.py  interfaces.py  market_data_service.py  portfolio_service.py
services/auth/: auth_factory.py  broker_auth.py  icici_auth.py  zerodha_auth.py
tests/: test_advanced_analytics.py  test_portfolio.py  test_returns.py  test_statistics.py
utils/: logger.py
